--- a/app/config/mappings.json
+++ b/app/config/mappings.json
@@ -30,6 +30,11 @@
         "realization": "api/controllers/JokeDeleteController.delete",
         "httpMethod": "POST",
         "type": "CMD"
+      },
+      "joke/getImageData": {
+        "realization": "api/controllers/JokeController.getImageData",
+        "httpMethod": "GET",
+        "type": "CMD"
       }
     }
   }
